test/functions/vass/return-type-function-failure.chpl
proc afun() {
  return 1;
}
proc valfun(): afun {
  return 1;
}
writeln(valfun());
